feat: production-ready setup with Neon + Prisma + secure secrets

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,18 @@
-# Database Configuration (Neon PostgreSQL)
+# ==============================================
+# DATABASE CONFIGURATION (NEON POSTGRES)
+# ==============================================
 # Get these from: https://console.neon.tech/
 DATABASE_URL=
 DIRECT_URL=
 
-# NextAuth Configuration
+# ==============================================
+# NEXTAUTH CONFIGURATION
+# ==============================================
 # Generate with: openssl rand -base64 32
 NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+NEXTAUTH_URL=http://localhost:3000
 
-# Application
-NODE_ENV=
+# ==============================================
+# APPLICATION
+# ==============================================
+NODE_ENV=development
