--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:migrate:deploy": "prisma migrate deploy",
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
+    "db:seed:skills": "tsx prisma/seed-skills.ts",
     "postinstall": "prisma generate",
     "deploy": "git add . && git commit -m \"update\" && git push",
     "deploy:msg": "git add . && git commit && git push"
