--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "next": "16.1.1",
+    "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
     "react": "19.2.3",
