--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@types/bcrypt": "^6.0.0",
+    "@vercel/postgres": "^0.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
