feat: add complete navigation with dropdown menus and catalog pages for qudrat and tahsili

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,9 +32,6 @@
   ],
   "exclude": [
     "node_modules",
-    "almeaago/**/*",
-    "prisma/seed.ts",
-    "prisma/seed-*.ts",
-    "scripts/**/*"
+    "almeaago/**/*"
   ]
 }
