--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "deploy:msg": "git add . && git commit && git push"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@stripe/stripe-js": "^8.6.1",
     "@types/bcrypt": "^6.0.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^6.0.0",
@@ -32,7 +34,8 @@
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "stripe": "^20.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
